Adds Process Map Diagram

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -141,25 +141,25 @@ BCOR5mm, % Binding correction
             para todo aquel que pase mucho tiempo frente a una computadora.
             El desarrollador es la materia prima de la empresa y el teclado
             es su principal herramienta para el ingreso de sus ideas.
-    \item Se requiere de un buen aprovisionamiento de mouse \(punteros de ordenaror\)
+    \item Se requiere de un buen aprovisionamiento de mouse (punteros de ordenaror)
             ya que algunas aplicaciones, ya sean utilizadas en internet o de
             escritorio, requieren la accion de presionar sobre botones en la
             pantalla.
-      \item Se requiere de gabinetes \(Caja rectangular donde se unen componentes
+      \item Se requiere de gabinetes (Caja rectangular donde se unen componentes
               alimentados por cables de electricidad unidos a una placa madre
-              que ejecutan las tareas internas del ordenador\) armados
-              con hardware \(Componentes individuales del ordenador\) capaz
+              que ejecutan las tareas internas del ordenador) armados
+              con hardware (Componentes individuales del ordenador) capaz
               de procesar tareas complejas a una velocidad rapida y eficiente.
     \item Se requiere de un buen aprovisionamiento de cables de red ya que
             sin ellos los equipos y servidores que requieran de una conectividad
             fluida entre ellos y a Internet, dependerian de una conexion por
             red inalambrica, inestable y mucho mas lenta.
-    \item Se requiere de un buen aprovisionamiento de modems \( Dispositivo
-            que facilita la conexion entre un ordenador e Internet \) o
-            Routers \( Dispositivo que facilita la conexion entre un
+    \item Se requiere de un buen aprovisionamiento de modems ( Dispositivo
+            que facilita la conexion entre un ordenador e Internet ) o
+            Routers ( Dispositivo que facilita la conexion entre un
             ordenador e Internet u otros dispositivos conectados al mismo
-            Router \) Wifi \( Tecnologia de transmision de datos por medio de
-            señales de ondas de radio en distintas frecuencias \) para
+            Router ) Wifi ( Tecnologia de transmision de datos por medio de
+            señales de ondas de radio en distintas frecuencias ) para
             conectividad de red sin cable.
     \item Se requiere de un buen aprovisionamiento de expansores de señal Wifi
             para un mayor abastecimiento de señal en todo el edificio y
@@ -174,7 +174,7 @@ BCOR5mm, % Binding correction
   \begin{itemize}
     \item Todo tipo de comunicacion se realizaria a traves de Internet en caso
             de que el personal de la empresa se encuentre trabajando desde su
-            domicilio \(Modalidad Home Office\).
+            domicilio (Modalidad Home Office).
   \end{itemize}
 \end{itemize}
 
@@ -192,8 +192,8 @@ BCOR5mm, % Binding correction
   \begin{itemize}
     \item Lider de Proyecto.
             El lider de proyecto se encarga de asignar las tareas del
-            Sprint \(Modalidad de desarrollo de entregables al cliente en un
-                     tiempo acordado con el cliente no mas de 3 semanas. \)
+            Sprint (Modalidad de desarrollo de entregables al cliente en un
+                     tiempo acordado con el cliente no mas de 3 semanas. )
             a cada desarrollador a su cargo y otorgar soporte a los mismos
             en caso de que alguna tarea asignada se haya subestimado y sea
             mas compleja que lo que se estimo desde un principio.
@@ -209,29 +209,11 @@ BCOR5mm, % Binding correction
             Tambien tienen la obligacion de avisar a su superior ante cualquier
             contra tiempo por incumplimiento de la fecha de entrega de alguna tarea.
   \end{itemize}
-
-  \item \textbf {Mapa de Proceso}
-  \begin{itemize}
-    \item Entrevista con el Cliente
-    \item Relevamiento de Informacion a tener en cuenta
-    \item Preparacion de Demostrativo
-    \item Se plantean 2 semanas de continuas entregas de
-            pequeñas caracteristicas funcionales a evaluacion
-            del cliente para una mayor frecuencia de respuesta
-            sobre el producto.
-
-    \item Preparacion de etapa Pre-Produccion. Para ello se genera un ambiente
-            en servidores maqueta para simular principales
-            comportamientos del sistema.
-
-    \item Preparacion de Puesta a Produccion del sistema en servidores del cliente
-  \end{itemize}
 \end{itemize}
 
 
 \section{Mapa de Procesos}
-
-  % this include the content of der-content.tex
+  % this include the content of process_map_content.tex
   \include{process_map_content}
 
 \end{document}
