starts to make more readable the soft description

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -24,49 +24,39 @@ BCOR5mm, % Binding correction
 
 \section{Idea y Oportunidad de Negocio}
 
-\subsection{Que tiene de innovadora nuestra idea ?}
-\textbf{La idea tiene de innovacion :}
+La idea tiene de innovacion la creacion de un sistema modular.
+con la posibilidad de sincronizar tareas entre distintas areas
+tales como ( proveedores - transportistas - clientes - distribuidoras )
+todo por medio de una aplicacion mobile ( Programa ejecutado en un telefono
+celular ) sincronizada con servidores en la nube ( Maquinas fisicas accedidas
+por medio de Internet )
 
-\begin{itemize}
-    \item { La creacion de un sistema modular. }
-    \item { La posibilidad de sincronizar tareas entre distintas areas
-        tales como ( proveedores - transportistas - clientes - distribuidoras )
-        todo por medio de una aplicacion mobile sincronizada con
-        servidores en la nube.}
-\end{itemize}
+Las necesidades a satisfacer se pueden ver involucradas en una  mayor
+organizacion a la hora de gestionar envios de mercaderias desde la salida
+del Deposito hasta la puerta del comprador/es,  mejor trazabilidad de
+rutas a destinos con verificacion de entregas por medio de consultas a una
+base de datos y notificaciones utilizando una aplicacion mobile desde el
+punto de entrega del transportista.
 
-\subsection{Cuales son las necesidades o deseos de los consumidores
-            que van a satisfacer ?}
-\textbf{Las necesidades a satisfacer son las siguientes :}
+Los beneficios a tener en cuenta son mayor tiempo de busqueda en nuevas
+oportunidades de expander el negocio, buscando nuevos clientes para satisfacer
+sus necesidades y transportar sus productos, con el soporte y confianza demostrado
+teniendo en cuenta la trazabilidad y reportes historicos de clientes sumados
+a los casos de exito.
 
-\begin{itemize}
-    \item { Mayor organizacion a la hora de gestionar envios de mercaderias
-              desde la salida del Deposito hasta la puerta del comprador/es. }
-    \item { Mejor trazabilidad de rutas a destinos. }
-    \item { Verificacion de entregas por medio de aplicacion mobile
-        desde el punto de entrega del transportista. }
-\end{itemize}
+Al mismo tiempo, otorga tranquilidad y visibilidad en cada etapa del
+proceso de entrega de productos, se utiliza un sistema de valoracion de
+entregas por medio de la utilizacion de aplicacion una mobile desde el
+punto de entrega del cliente para valorar el servicio otorgado por la empresa.
 
-\subsection{Cuales son los beneficios que nuestro producto (bien o servicio)
-             ofrecera al cliente ?}
-\textbf { Los beneficios que el producto ofrece son: }
-
-\begin{itemize}
-    \item { Mayor tiempo de busqueda en nuevas oportunidades de negocio. }
-    \item { Tranquilidad y Visibilidad en cada etapa del proceso de entrega
-              de productos. }
-    \item { Sistema de valoracion de entregas por medio de aplicacion mobile
-        desde el cliente. }
-\end{itemize}
-
-\subsection{Porque el cliente comprara nuestro producto ?}
-\textbf {El cliente compraria nuestro producto por :}
-
-\begin{itemize}
-    \item { Muchas variedades de soluciones para distintas areas del proceso
-              de transporte de productos. }
-    \item { Alta confiabilidad y seguridad de datos. }
-\end{itemize}
+El cliente compraria nuestro producto porque provee muchas variedades de
+soluciones para distintas areas del proceso de transporte de mercaderias cons
+una alta confiabilidad y seguridad de datos, con la posibilidad de activar
+procesos de guardado de informacion automaticos programables por el usuario
+con mayor rango en el sistema. Esta capacidad aumenta que los registros
+de los clientes puedan ser guardados en formato portable y generar copias de
+seguridad en caso de fallas del ordenador por mal funcionamiento del
+sistema operativo.
 
 \subsection{Puede este negocio generar dinero ?}
   Definitivamente.
