Ends to make more readable the business introductory description

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -58,20 +58,17 @@ de los clientes puedan ser guardados en formato portable y generar copias de
 seguridad en caso de fallas del ordenador por mal funcionamiento del
 sistema operativo.
 
-\subsection{Puede este negocio generar dinero ?}
-  Definitivamente.
+Definitivamente este negocio puede generar dinero, la estrategia de venta
+va a ser basada en distintos Packs de soluciones por medio de modulos
+a demanda del/los cliente/s . Todas las nuevas caracteristicas que el cliente
+quiera agregar al producto base no perjudicara el trabajo actual ya realizado
+por el cliente, ya que el sistema contara con un administrador de
+Plugins ( funcionalidades adicionales que proporcionan mayor versatilidad a un
+sistema ya desarrollado ).
+Tambien la empresa contara con contratos diferenciados en tipos de paquetes de
+rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
-  La estrategia de venta va a ser basada en
-  distintos Packs de soluciones por medio de modulos
-  a demanda del cliente.
-
-  Todas la nuevas caracteristicas que el cliente quiera agregar
-  al producto base no perjudicara el trabajo actual ya realizado
-  por el cliente.
-
-  Tambien se puede ofrecer Soporte en horarios de trabajo.
-
-\pagebreak
+%\pagebreak
 
 \section {Viabilidad de Negocio}
 
