Description of Process added

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -203,4 +203,83 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   % this include the content of process_map_content.tex
   \include{process_map_content}
 
+  \textbf{ \emph{Marketing : } } El proceso de \textit{Marketing} estara
+  a cargo de la creacion del modelo de negocio para poder generar las ventas.
+
+  \textbf{ \emph{Publicidad : } } El proceso de \textit{Publicidad} estara
+  a cargo de la imagen, estetica y estrategia artistica para llamar la atencion
+  de los consumidores y generar consultas sobre nuestro producto.
+
+  \textbf{ \emph{Gestion de Personal : } } La \textit{Gestion de Personal}
+  se hara cargo de la administracion de los empleados. En el mismo se debe
+  administrar los pagos de cada empleado de la empresa como realizar la busqueda
+  de nuevos talentos para la compania cuando sea requerido.
+
+  \textbf{ \emph{Gestion de Finanzas : } } La \textit{Gestion  de Finanzas} se
+   hara cargo de la administracion de la recaudacion de ingresos monetarios
+   adquiridos por parte de contratos establecidos a clientes. A su vez
+   estara a cargo de autorizar la incorporacion de nuevos integrantes a la
+   empresa como tambien nuevos insumos para mejorar la productividad e
+   imagen de la empresa.
+
+  \textbf{ \emph{Distribucion de Tareas : } } En la \textit{Distribucion de Tareas}
+  se evaluan las prioridades a tener en cuenta para un periodo de dos semanas.
+  Estas prioridades son creadas en conjunto entre el cliente y un representante
+  tecnico de la empresa ( por lo general un analista funcional ) y se decide
+  que nuevas caracteristicas incluir en las siguientes semanas del desarrollo..
+
+  \textbf{ \emph{Estimacion de Tiempos : } } En la \textit{Estimacion de Tiempos}
+  se evalua un promedio de tiempo de desarrollo  para las tareas seleccionadas
+  en la etapa de \textit{Distribucion de Tareas}. La estimacion promedio de
+  cada  tarea a realizar por los desarrolladores la realiza el
+  \textit{Lider Tecnico} del equipo en consenso con el \textit{Desarrollador}
+  a quien se le asignara la tarea.
+
+  \textbf{ \emph{Desarrollo del Producto : } } En el \textit{Desarrollo del Producto}
+  se realizan las tareas asignadas en el proceso de \textit{Distribucion de Tareas}.
+  Las mismas son esperadas que se realicen en el tiempo establecido y acordado
+  entre el \textit{Desarrollador} y el \textit{Lider Tecnico}.
+
+  \textbf{ \emph{Pruebas de Integracion : } } En el proceso de
+  \textit{Pruebas de Integracion} se realizan pruebas \emph{Funcionales} de
+  las distintas caracteristicas del producto. Por Ejemplo,
+  \newline
+  \& "\textsc{Entrada de Clientes}", "\textsc{Exportacion de Datos}".
+
+  \textbf{ \emph{Relevamiento de Informacion : } } En el proceso de
+  \textit{Relevamiento de Informacion} se realiza una reunion con el cliente
+  para generar nuevos comportamientos y funcionalidades que pueden llevar al
+  sistema a su siguiente nivel. En dicha reunion deben obtenerse que necesidades
+  no estan integradas actualmente en el sistema y son requeridas por el cliente.
+  Para ello se debe obtener informacion de como son los procesos actuales del
+  cliente para comprender mejor sus espectativas y brindar soluciones que
+  asceleren su productividad.
+  Por Ejemplo,
+  "\textsc{Mapa de actuales entregas en proceso}",
+  "\textsc{Calendario para seguimiento de entregas}",
+  "\textsc{Envio automatico de notificaciones a clientes sobre el estado del envio}".
+
+  \textbf{ \emph{Planeamiento : } } En el proceso de \textit{Planeamiento} se
+  distribuyen las nuevas funcionalidades generales de cada area del sistema y
+  son entregadas a cada \textit{Lider Tecnico} para empezar con el proceso de
+  \textit{Distribucion de Tareas}.
+
+  \textbf{ \emph{Pruebas en Servidores : } } El proceso de
+  \textit{Pruebas en Servidores} se realiza una instalacion de ambiente
+  de prueba de todo el sistema. La particularidad de este proceso es que
+  se realiza en servidores del cliente y es un simulacro de utilidad del mismo.
+  Se instala el sistema ya desarrollado para que personal del cliente lo
+  utilice como si estviera en un entorno productivo. Los beneficion que esta
+  trae, es que pueden encontrar errores que el \textit{Desarrollador} no tuvo
+  en cuenta.
+
+  \textbf{ \emph{Puesta en Produccion : } } En el proceso de
+  \textit{Puesta en Produccion} se realiza la instalacion del ambiente
+  definitivo del sistema. Se realiza en horarios donde los operarios del mismo
+  tienen la menor carga operacional para que la transicion de datos pueda
+  realizarse de manera correcta y con menor riesgo de perdida de informacion.
+  Se acuerda un periodo de tiempo para llevar a cabo el proceso y puede
+  finalizar en un resultado \textsc{Positivo} o \textsc{Negativo} teniendo
+  que corregir los errores dados en el proceso y acordar una nueva fecha de
+  instalacion del sistema.
 \end{document}
