--- a/documentation/process_map_content.tex
+++ b/documentation/process_map_content.tex
@@ -27,17 +27,17 @@
 % Strategic
   \node[strategic]  (node1) [below=of estr]  {Marketing};
   \node[strategic]  (node2) [below=of node1] {Publicidad};
-  \node[strategic]  (node3) [below=of node2] {Contratacion de Personal};
-  \node[strategic]  (node4) [below=of node3] {Politicas Financieras};
+  \node[strategic]  (node3) [below=of node2] {Gestion de Personal};
+  \node[strategic]  (node4) [below=of node3] {Gestion de Finanzas};
 
 % Operative
   \node[operative]  (node5) [below=of oper]  {Distribucion de Tareas};
   \node[operative]  (node6) [below=of node5] {Estimacion de Tiempos};
   \node[operative]  (node7) [below=of node6] {Desarrollo del Producto};
-  \node[operative]  (node8) [below=of node7] {Pruebas Unitarias};
+  \node[operative]  (node8) [below=of node7] {Pruebas de Integracion};
 
 % Support
-  \node[support]    (node9)  [below=of supp]  {Relevacion de Informacion};
+  \node[support]    (node9)  [below=of supp]  {Relevamiento de Informacion};
   \node[support]    (node10) [below=of node9]  {Planeamiento};
   \node[support]    (node11) [below=of node10] {Pruebas en Servidores};
   \node[support]    (node12) [below=of node11] {Puesta en Produccion};
