Adds quantities to devices needed per team

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -29,26 +29,26 @@ con la posibilidad de sincronizar tareas entre distintas areas
 tales como ( proveedores - transportistas - clientes - distribuidoras )
 todo por medio de una aplicacion mobile ( Programa ejecutado en un telefono
 celular ) sincronizada con servidores en la nube ( Maquinas fisicas accedidas
-por medio de Internet )
-
+por medio de Internet ).
+\newline\newline
 Las necesidades a satisfacer se pueden ver involucradas en una  mayor
 organizacion a la hora de gestionar envios de mercaderias desde la salida
 del Deposito hasta la puerta del comprador/es,  mejor trazabilidad de
 rutas a destinos con verificacion de entregas por medio de consultas a una
 base de datos y notificaciones utilizando una aplicacion mobile desde el
 punto de entrega del transportista.
-
+\newline\newline
 Los beneficios a tener en cuenta son mayor tiempo de busqueda en nuevas
 oportunidades de expander el negocio, buscando nuevos clientes para satisfacer
 sus necesidades y transportar sus productos, con el soporte y confianza demostrado
 teniendo en cuenta la trazabilidad y reportes historicos de clientes sumados
 a los casos de exito.
-
+\newline\newline
 Al mismo tiempo, otorga tranquilidad y visibilidad en cada etapa del
 proceso de entrega de productos, se utiliza un sistema de valoracion de
 entregas por medio de la utilizacion de aplicacion una mobile desde el
 punto de entrega del cliente para valorar el servicio otorgado por la empresa.
-
+\newline\newline
 El cliente compraria nuestro producto porque provee muchas variedades de
 soluciones para distintas areas del proceso de transporte de mercaderias cons
 una alta confiabilidad y seguridad de datos, con la posibilidad de activar
@@ -57,7 +57,7 @@ con mayor rango en el sistema. Esta capacidad aumenta que los registros
 de los clientes puedan ser guardados en formato portable y generar copias de
 seguridad en caso de fallas del ordenador por mal funcionamiento del
 sistema operativo.
-
+\newline\newline
 Definitivamente este negocio puede generar dinero, la estrategia de venta
 va a ser basada en distintos Packs de soluciones por medio de modulos
 a demanda del/los cliente/s . Todas las nuevas caracteristicas que el cliente
@@ -68,20 +68,19 @@ sistema ya desarrollado ).
 Tambien la empresa contara con contratos diferenciados en tipos de paquetes de
 rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
-%\pagebreak
-
 \section {Viabilidad de Negocio}
 
 \subsection{Proceso Productivo}
 \begin{itemize}
   \item \textbf {Materiales Necesarios}
   \begin{itemize}
-    \item Se requiere el uso de discos externos para la administracion de
-            guardado de informacion relevante al desarrollo del producto.
-    \item Se requiere el uso de pendrives para el facil y comodo traslado
-            de archivos de video, librerias y graficos para ser utilizados
-            el dia que se requiera una presentacion al cliente en las oficinas
-            del mismo.
+    \item Se requiere el uso de \emph { \textbf{6} } discos externos para la
+            administracion de guardado de informacion relevante al desarrollo
+            del producto.
+    \item Se requiere el uso de pendrives para el facil
+            y comodo traslado de archivos de video, librerias y graficos
+            para ser utilizados el dia que se requiera una presentacion al
+            cliente en las oficinas del mismo.
     \item Se requiere utilizar un ambiente de oficina  contando con no mas
             de 20 Grados Cent para una mayor refrigeracion y rendimiento de los
             equipos tecnicos utilizados para lleva a cabo las tareas de desarrollo.
@@ -109,6 +108,8 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             prendidos en todo momento.
   \end{itemize}
 
+\pagebreak
+
   \item \textbf {Mano de Obra}
   \begin{itemize}
     \item Para la creacion de la empresa, se requiere de personal capacitado y
@@ -116,39 +117,42 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
             de computacion para tener que evitar una previa capacitacion.
   \end{itemize}
 
+
   \item \textbf {Insumos}
   \begin{itemize}
-    \item Se requiere de un buen aprovisionamiento de monitores de alta gama,
+    \item Se requiere de \emph { \textbf{33} } monitores de alta gama,
             ya que con ellos, los programadores pueden tener mas herramientas
             a la vista y agilizar su desarrollo tanto como su desempeño a la
             hora de analizar nuevos requerimientos y llevar a cabo las tareas
             necesarias de investigacion, desarrollo y pruebas del producto.
-    \item Se requiere de un buen aprovisionamiento de teclados ergonomicos
+    \item Se requiere de \emph { \textbf{17} } teclados ergonomicos
             ya que los teclados comunes conducen a una postura poco saludable
             para todo aquel que pase mucho tiempo frente a una computadora.
             El desarrollador es la materia prima de la empresa y el teclado
             es su principal herramienta para el ingreso de sus ideas.
-    \item Se requiere de un buen aprovisionamiento de mouse (punteros de ordenaror)
+    \item Se requiere de \emph { \textbf{17} } mouse (punteros de ordenaror)
             ya que algunas aplicaciones, ya sean utilizadas en internet o de
             escritorio, requieren la accion de presionar sobre botones en la
             pantalla.
-      \item Se requiere de gabinetes (Caja rectangular donde se unen componentes
-              alimentados por cables de electricidad unidos a una placa madre
-              que ejecutan las tareas internas del ordenador) armados
-              con hardware (Componentes individuales del ordenador) capaz
-              de procesar tareas complejas a una velocidad rapida y eficiente.
-    \item Se requiere de un buen aprovisionamiento de cables de red ya que
-            sin ellos los equipos y servidores que requieran de una conectividad
+      \item Se requiere de \emph { \textbf{17} } Gabinetes (Caja rectangular
+              donde se unen componentes alimentados por cables de electricidad
+              unidos a una placa madre que ejecutan las tareas internas del
+              ordenador) armados con hardware (Componentes individuales del
+              ordenador) capaz de procesar tareas complejas a una velocidad
+              rapida y eficiente.
+    \item Se requiere de \emph { \textbf{17} } cables de red ya que sin ellos
+            los equipos y servidores que requieran de una conectividad
             fluida entre ellos y a Internet, dependerian de una conexion por
             red inalambrica, inestable y mucho mas lenta.
-    \item Se requiere de un buen aprovisionamiento de modems ( Dispositivo
+    \item Se requiere de \emph { \textbf{5} } modems ( Dispositivo
             que facilita la conexion entre un ordenador e Internet ) o
             Routers ( Dispositivo que facilita la conexion entre un
             ordenador e Internet u otros dispositivos conectados al mismo
             Router ) Wifi ( Tecnologia de transmision de datos por medio de
             señales de ondas de radio en distintas frecuencias ) para
             conectividad de red sin cable.
-    \item Se requiere de un buen aprovisionamiento de expansores de señal Wifi
+\pagebreak
+    \item Se requiere de \emph { \textbf{1} } expansor de señal Wifi
             para un mayor abastecimiento de señal en todo el edificio y
             no depender de varios Routers para que la señal sea accesible en
             todas las oficinas.
@@ -198,54 +202,51 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   \end{itemize}
 \end{itemize}
 
-
-\section{Mapa de Procesos}
-  % this include the content of process_map_content.tex
-  \include{process_map_content}
+\section{Procesos}
 
   \textbf{ \emph{Marketing : } } El proceso de \textit{Marketing} estara
   a cargo de la creacion del modelo de negocio para poder generar las ventas.
-
+   \newline \newline
   \textbf{ \emph{Publicidad : } } El proceso de \textit{Publicidad} estara
   a cargo de la imagen, estetica y estrategia artistica para llamar la atencion
   de los consumidores y generar consultas sobre nuestro producto.
-
+   \newline \newline
   \textbf{ \emph{Gestion de Personal : } } La \textit{Gestion de Personal}
   se hara cargo de la administracion de los empleados. En el mismo se debe
   administrar los pagos de cada empleado de la empresa como realizar la busqueda
   de nuevos talentos para la compania cuando sea requerido.
-
+   \newline \newline
   \textbf{ \emph{Gestion de Finanzas : } } La \textit{Gestion  de Finanzas} se
    hara cargo de la administracion de la recaudacion de ingresos monetarios
    adquiridos por parte de contratos establecidos a clientes. A su vez
    estara a cargo de autorizar la incorporacion de nuevos integrantes a la
    empresa como tambien nuevos insumos para mejorar la productividad e
    imagen de la empresa.
-
+  \newline  \newline
   \textbf{ \emph{Distribucion de Tareas : } } En la \textit{Distribucion de Tareas}
   se evaluan las prioridades a tener en cuenta para un periodo de dos semanas.
   Estas prioridades son creadas en conjunto entre el cliente y un representante
   tecnico de la empresa ( por lo general un analista funcional ) y se decide
   que nuevas caracteristicas incluir en las siguientes semanas del desarrollo..
-
+  \newline  \newline
   \textbf{ \emph{Estimacion de Tiempos : } } En la \textit{Estimacion de Tiempos}
   se evalua un promedio de tiempo de desarrollo  para las tareas seleccionadas
   en la etapa de \textit{Distribucion de Tareas}. La estimacion promedio de
   cada  tarea a realizar por los desarrolladores la realiza el
   \textit{Lider Tecnico} del equipo en consenso con el \textit{Desarrollador}
   a quien se le asignara la tarea.
-
+  \newline  \newline
   \textbf{ \emph{Desarrollo del Producto : } } En el \textit{Desarrollo del Producto}
   se realizan las tareas asignadas en el proceso de \textit{Distribucion de Tareas}.
   Las mismas son esperadas que se realicen en el tiempo establecido y acordado
   entre el \textit{Desarrollador} y el \textit{Lider Tecnico}.
-
+  \newline  \newline
   \textbf{ \emph{Pruebas de Integracion : } } En el proceso de
   \textit{Pruebas de Integracion} se realizan pruebas \emph{Funcionales} de
   las distintas caracteristicas del producto. Por Ejemplo,
   \newline
   \& "\textsc{Entrada de Clientes}", "\textsc{Exportacion de Datos}".
-
+  \newline  \newline
   \textbf{ \emph{Relevamiento de Informacion : } } En el proceso de
   \textit{Relevamiento de Informacion} se realiza una reunion con el cliente
   para generar nuevos comportamientos y funcionalidades que pueden llevar al
@@ -258,12 +259,12 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   "\textsc{Mapa de actuales entregas en proceso}",
   "\textsc{Calendario para seguimiento de entregas}",
   "\textsc{Envio automatico de notificaciones a clientes sobre el estado del envio}".
-
+  \newline  \newline
   \textbf{ \emph{Planeamiento : } } En el proceso de \textit{Planeamiento} se
   distribuyen las nuevas funcionalidades generales de cada area del sistema y
   son entregadas a cada \textit{Lider Tecnico} para empezar con el proceso de
   \textit{Distribucion de Tareas}.
-
+  \newline  \newline
   \textbf{ \emph{Pruebas en Servidores : } } El proceso de
   \textit{Pruebas en Servidores} se realiza una instalacion de ambiente
   de prueba de todo el sistema. La particularidad de este proceso es que
@@ -272,7 +273,7 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   utilice como si estviera en un entorno productivo. Los beneficion que esta
   trae, es que pueden encontrar errores que el \textit{Desarrollador} no tuvo
   en cuenta.
-
+  \newline  \newline
   \textbf{ \emph{Puesta en Produccion : } } En el proceso de
   \textit{Puesta en Produccion} se realiza la instalacion del ambiente
   definitivo del sistema. Se realiza en horarios donde los operarios del mismo
@@ -282,4 +283,48 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
   finalizar en un resultado \textsc{Positivo} o \textsc{Negativo} teniendo
   que corregir los errores dados en el proceso y acordar una nueva fecha de
   instalacion del sistema.
+
+\pagebreak
+
+  \subsection{Mapa de Procesos}
+    % this include the content of process_map_content.tex
+    \include{process_map_content}
 \end{document}
+
+
+
+
+% Just in case of need
+% std nus: ( normal computer user )
+%   tec : 1
+%   mou : 1
+%   cpu : 1
+%   aur : 1
+%   caR : 1 (cable de red rj45)
+
+% std hr:   ( human resource )
+%   nus : 1
+%   mon : 1
+%
+
+% std dev / tl / des:  ( Software Developer / team leader / designer )
+%   use : 1
+%   mon : 2
+%
+% dev / des team:
+%   dev: 3
+%    tl: 1
+%   dex: 1  ( discos externos )
+%   pen: 2  ( pendrives )
+%   rou: 1  ( router )
+%
+% Prd Area:
+%   dvt: 3  ( Dev team )
+%   dst: 1  ( Des team )
+
+% Spa Area:     ( Spare Time Area )
+%   exs : 1  ( Wife signal Expansor )
+
+% building:
+%    par: 1  ( prodction area on building )
+%    sar: 1  ( spare time area  on building )
