Market Analisis began

--- a/documentation/business_view.tex
+++ b/documentation/business_view.tex
@@ -68,6 +68,41 @@ sistema ya desarrollado ).
 Tambien la empresa contara con contratos diferenciados en tipos de paquetes de
 rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 
+\section {Analsis del Mercado Consumidor}
+\subsection {Perfil y Comportamiento del consumidor}
+  El surgimiento de la necesidad de logistica para el transporte de
+  productos o individuos, se origino en la Ingenieria Militar.
+  El objetivo fue trasladar Miles de soldados al mismo tiempo utilizando
+  varios y variados metodos evitando que el enemigo note su transporte
+  y llegada al objetivo.
+  Para llevar a cabo tal plan, se originan los planes de transportes.
+
+  Actualmente las Empresas de Logistica tienen como objetivo, planificar el
+  traslado de Personas, Productos, Materia Prima, etc, de un lugar a otro.
+  Para ello se requiere de una gran infraestructura para poder satisfacer
+  varias etapas que cumplen con el objetivo planteado.
+
+  Algunas etapas son :
+  \begin{itemize}
+    \item  Analisis de Trayecto de Mercaderia
+    \item  Distribucion de Productos por transporte
+    \item  Administracion de Stock de Productos
+  \end{itemize}
+
+
+\subsection {Segmentacion del Mercado}
+  Actualmente el Sistema sera de amplio alcance gracias a su facilidad
+  de incorporacion y paquetes de modulos en la estrategia de venta, dando
+  la posibilidad de obtener la atencion de las medianas y grandes empresas.
+
+
+
+
+
+
+
+
+
 \section {Viabilidad de Negocio}
 
 \subsection{Proceso Productivo}
@@ -292,7 +327,8 @@ rangos de periodos de tiempo para ofrecer Soporte en horarios de trabajo.
 \end{document}
 
 
-
+\section {Referencias}
+  Link : \emph { \textbf{https://clusterlogistic.org/es/historia-de-la-logistica/} }
 
 % Just in case of need
 % std nus: ( normal computer user )
